# gptcall

./: README.md
Android/: Main.c  cookies.txt  newfile.c
Android/nuklear/: getttf.c  nuklear.h  style.h
consoles/: CMakeLists.txt  gpt-3.5.c
windows/: CMakeLists.txt  main.c
